--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
   </head>
   <body>
     <h1>Hello World!</h1>
-    <footer>coded by Julia</footer>
+    <footer>
+      coded by
+      <a href="https://github.com/bee60990" target="_blank ">Julia</a>
+    </footer>
   </body>
 </html>
