added links to files

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <h1>Hello World!</h1>
@@ -11,5 +12,8 @@
       coded by
       <a href="https://github.com/bee60990" target="_blank ">Julia</a>
     </footer>
+    <script>
+      src = "index.js";
+    </script>
   </body>
 </html>
