--- a/index.html
+++ b/index.html
@@ -7,9 +7,27 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>Hello World!</h1>
+    <header>
+      <form>
+        <input type="search" placeholder="Enter a city" required />
+        <input type="submit" value="Search" />
+      </form>
+    </header>
+    <main>
+      <h1>Paris</h1>
+      <div>
+        <p>
+          Saturday 17:30, light rain
+          <br />
+          Humidity: 86%, Wind: 6.69km/h
+        </p>
+      </div>
+      <p>
+      <div> 🌤️ 16 °C</div>
+      </p>
+    </main>
     <footer>
-      coded by
+      This page was coded by
       <a href="https://github.com/bee60990" target="_blank ">Julia</a>
     </footer>
     <script>
