styled main container

--- a/index.html
+++ b/index.html
@@ -4,34 +4,34 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="src/style.css" />
   </head>
   <body>
-    <header>
-      <form>
-        <input type="search" placeholder="Enter a city" required />
-        <input type="submit" value="Search" />
-      </form>
-    </header>
-    <main>
-      <h1>Paris</h1>
-      <div>
-        <p>
-          Saturday 17:30, light rain
-          <br />
-          Humidity: 86%, Wind: 6.69km/h
-        </p>
-      </div>
-      <p>
-      <div> 🌤️ 16 °C</div>
-      </p>
-    </main>
-    <footer>
-      This page was coded by
-      <a href="https://github.com/bee60990" target="_blank ">Julia</a>
-    </footer>
+    <div class="weatherapp">
+      <header>
+        <form>
+          <input type="search" placeholder="Enter a city" required />
+          <input type="submit" value="Search" />
+        </form>
+      </header>
+      <main>
+        <h1>Paris</h1>
+        <div>
+          <p>
+            Saturday 17:30, light rain
+            <br />
+            Humidity: 86%, Wind: 6.69km/h
+          </p>
+        </div>
+        <div>🌤️ 16 °C</div>
+      </main>
+      <footer>
+        This page was coded by
+        <a href="https://github.com/bee60990" target="_blank ">Julia</a>
+      </footer>
+    </div>
     <script>
-      src = "index.js";
+      src = "src/index.js";
     </script>
   </body>
 </html>
