--- a/index.html
+++ b/index.html
@@ -50,13 +50,12 @@
 
       <footer>
         This project was coded by
-        <a href="https://github.com/matthieua/" target="_blank"> Matt Delac</a>,
-        is
-        <a href="https://github.com/matthieua/meteo" target="_blank"
+        <a href="https://github.com/bee60990" target="_blank"> Julia</a>, is
+        <a href="https://github.com/bee60990?tab=repositories" target="_blank"
           >open-sourced on GitHub</a
         >
         and
-        <a href="https://meteo-shecodes-app.netlify.app/" target="_blank"
+        <a href="https://vanillaweather25.netlify.app" target="_blank"
           >hosted on Netlify</a
         >
       </footer>
