--- a/index.html
+++ b/index.html
@@ -46,6 +46,51 @@
             <div class="weather-app-unit">°C</div>
           </div>
         </div>
+
+        <div class="weather-forecast">
+          <div class="weather-forecast-day">
+            <div class="weather-forecast-date">Sat</div>
+            <div class="weather-forecast-icon">☀️</div>
+            <div class="temperatures-forecast">
+              <div class="temperature-forecast"><strong>16°</strong></div>
+              <div class="temperature-forecast">9°</div>
+            </div>
+          </div>
+
+          <div class="weather-forecast-day">
+            <div class="weather-forecast-date">Sat</div>
+            <div class="weather-forecast-icon">☀️</div>
+            <div class="temperatures-forecast">
+              <div class="temperature-forecast"><strong>16°</strong></div>
+              <div class="temperature-forecast">9°</div>
+            </div>
+          </div>
+          <div class="weather-forecast-day">
+            <div class="weather-forecast-date">Sat</div>
+            <div class="weather-forecast-icon">☀️</div>
+            <div class="temperatures-forecast">
+              <div class="temperature-forecast"><strong>16°</strong></div>
+              <div class="temperature-forecast">9°</div>
+            </div>
+          </div>
+
+          <div class="weather-forecast-day">
+            <div class="weather-forecast-date">Sat</div>
+            <div class="weather-forecast-icon">☀️</div>
+            <div class="temperatures-forecast">
+              <div class="temperature-forecast"><strong>16°</strong></div>
+              <div class="temperature-forecast">9°</div>
+            </div>
+          </div>
+          <div class="weather-forecast-day">
+            <div class="weather-forecast-date">Sat</div>
+            <div class="weather-forecast-icon">☀️</div>
+            <div class="temperatures-forecast">
+              <div class="temperature-forecast"><strong>16°</strong></div>
+              <div class="temperature-forecast">9°</div>
+            </div>
+          </div>
+        </div>
       </main>
 
       <footer>
