Added the forecast as in injection in CSS

--- a/index.html
+++ b/index.html
@@ -47,50 +47,7 @@
           </div>
         </div>
 
-        <div class="weather-forecast">
-          <div class="weather-forecast-day">
-            <div class="weather-forecast-date">Sat</div>
-            <div class="weather-forecast-icon">☀️</div>
-            <div class="temperatures-forecast">
-              <div class="temperature-forecast"><strong>16°</strong></div>
-              <div class="temperature-forecast">9°</div>
-            </div>
-          </div>
-
-          <div class="weather-forecast-day">
-            <div class="weather-forecast-date">Sat</div>
-            <div class="weather-forecast-icon">☀️</div>
-            <div class="temperatures-forecast">
-              <div class="temperature-forecast"><strong>16°</strong></div>
-              <div class="temperature-forecast">9°</div>
-            </div>
-          </div>
-          <div class="weather-forecast-day">
-            <div class="weather-forecast-date">Sat</div>
-            <div class="weather-forecast-icon">☀️</div>
-            <div class="temperatures-forecast">
-              <div class="temperature-forecast"><strong>16°</strong></div>
-              <div class="temperature-forecast">9°</div>
-            </div>
-          </div>
-
-          <div class="weather-forecast-day">
-            <div class="weather-forecast-date">Sat</div>
-            <div class="weather-forecast-icon">☀️</div>
-            <div class="temperatures-forecast">
-              <div class="temperature-forecast"><strong>16°</strong></div>
-              <div class="temperature-forecast">9°</div>
-            </div>
-          </div>
-          <div class="weather-forecast-day">
-            <div class="weather-forecast-date">Sat</div>
-            <div class="weather-forecast-icon">☀️</div>
-            <div class="temperatures-forecast">
-              <div class="temperature-forecast"><strong>16°</strong></div>
-              <div class="temperature-forecast">9°</div>
-            </div>
-          </div>
-        </div>
+        <div class="weather-forecast" id="forecast"></div>
       </main>
 
       <footer>
